# barcode-scanner-rs

./: CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-BSD  README.md
examples/: scan-barcodes.rs
src/: lib.rs
