[package]
name = "barcode-scanner"
version = "0.1.0"
description = "Linux interface to barcode USB hand scanners"
license = "BSD-2-Clause OR Apache-2.0"
repository = "https://github.com/robohouse-delft/barcode-scanner-rs"
documentation = "https://docs.rs/barcode-scanner"
keywords = ["barcode", "scan", "scanner", "usb"]
categories = ["hardware-support", "science:robotics"]
authors = ["Denis Zatyagov <denis@zatyagov.com>", "Maarten de Vries <maarten@de-vri.es>"]

edition = "2021"

[features]
tokio = ["dep:tokio"]

[dependencies]
evdev = "0.12.1"
tokio = { version = "1.20.1", optional = true, features = ["rt", "sync"] }
